@startuml

title __TENTH's Class Diagram__\n

  namespace cn.shui.learning_plan.datastruct.tenth {
    class cn.shui.learning_plan.datastruct.tenth.L144 {
        - ans : List<Integer>
        + preorderTraversal1()
        + preorderTraversal2()
        + preorderTraversal3()
        + preorderTraversal4()
        - preorder()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.tenth {
    class cn.shui.learning_plan.datastruct.tenth.L144.TreeNode {
        ~ val : int
        ~ TreeNode()
        ~ TreeNode()
        ~ TreeNode()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.tenth {
    class cn.shui.learning_plan.datastruct.tenth.L145 {
        - ans : List<Integer>
        + postorderTraversal1()
        + postorderTraversal2()
        + postorderTraversal3()
        + postorderTraversal4()
        - addPath()
        - postorder()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.tenth {
    class cn.shui.learning_plan.datastruct.tenth.L145.TreeNode {
        ~ val : int
        ~ TreeNode()
        ~ TreeNode()
        ~ TreeNode()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.tenth {
    class cn.shui.learning_plan.datastruct.tenth.L94 {
        - ans : List<Integer>
        + inorderTraversal1()
        + inorderTraversal2()
        + inorderTraversal3()
        + inorderTraversal4()
        - inorder()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.tenth {
    class cn.shui.learning_plan.datastruct.tenth.L94.TreeNode {
        ~ val : int
        ~ TreeNode()
        ~ TreeNode()
        ~ TreeNode()
    }
  }
  

  cn.shui.learning_plan.datastruct.tenth.L144 +-down- cn.shui.learning_plan.datastruct.tenth.L144.TreeNode
  cn.shui.learning_plan.datastruct.tenth.L144.TreeNode o-- cn.shui.learning_plan.datastruct.tenth.L144.TreeNode : left
  cn.shui.learning_plan.datastruct.tenth.L144.TreeNode o-- cn.shui.learning_plan.datastruct.tenth.L144.TreeNode : right
  cn.shui.learning_plan.datastruct.tenth.L145 +-down- cn.shui.learning_plan.datastruct.tenth.L145.TreeNode
  cn.shui.learning_plan.datastruct.tenth.L145.TreeNode o-- cn.shui.learning_plan.datastruct.tenth.L145.TreeNode : left
  cn.shui.learning_plan.datastruct.tenth.L145.TreeNode o-- cn.shui.learning_plan.datastruct.tenth.L145.TreeNode : right
  cn.shui.learning_plan.datastruct.tenth.L94 +-down- cn.shui.learning_plan.datastruct.tenth.L94.TreeNode
  cn.shui.learning_plan.datastruct.tenth.L94.TreeNode o-- cn.shui.learning_plan.datastruct.tenth.L94.TreeNode : left
  cn.shui.learning_plan.datastruct.tenth.L94.TreeNode o-- cn.shui.learning_plan.datastruct.tenth.L94.TreeNode : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
